--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,7 @@
 		<artifactId>commons-dbcp</artifactId>
 		<version>1.2.2</version>
 	</dependency>
+	
 	<!-- JSTL标签类 -->
 	<dependency>
 		<groupId>jstl</groupId>
@@ -188,9 +189,25 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.9</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- 导入commons-fileupload包，实现文件上传 -->
+	<dependency>
+       <groupId>commons-fileupload</groupId>
+       <artifactId>commons-fileupload</artifactId>
+       <version>1.3.2</version>
+    </dependency>
+
+	<!-- 导入commons-io，实现文件上传 -->
+	<dependency>
+       <groupId>commons-io</groupId>
+       <artifactId>commons-io</artifactId>
+       <version>2.3</version>
+    </dependency>
+	
+    
   </dependencies>
   <build>
     <finalName>MusicPlayer</finalName>
