--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,24 @@
   	<filter-name>encodingFilter</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
+  <!-- 自动登陆过滤器 -->
+  <!-- <filter>
+  	<filter-name>AutoLoginFilter</filter-name>
+  	<filter-class>com.musicplayer.web.filter.AutoLoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>AutoLoginFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping> -->
+  <!-- 记住密码过滤器 -->
+ <!--  <filter>
+  	<filter-name>RemberPassFilter</filter-name>
+  	<filter-class>com.musicplayer.web.filter.RemberPassFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>RemberPassFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping> -->
   <!-- 添加spring的监听器 -->
   <listener>
   	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -47,14 +65,14 @@
   </servlet-mapping>
   
   <!-- log4j日志文件 -->
-  <context-param>
+  <!-- <context-param>
   	<param-name>log4jConfigLocation</param-name>
   	<param-value>classpath:/properties/log4j.properties</param-value>
-  </context-param>
+  </context-param> -->
   <!-- 日志监听器 -->
-  <listener>
+  <!-- <listener>
   	<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
+  </listener> -->
   
   <!-- 初始化的界面 -->
   <welcome-file-list>
