--- a/pom.xml
+++ b/pom.xml
@@ -214,11 +214,23 @@
     <version>1.18.3</version>
 </dependency>
 	
-	<dependency>
+<dependency>
     <groupId>com.sun.jersey</groupId>
     <artifactId>jersey-core</artifactId>
     <version>1.17.1</version>
 </dependency>
+
+<dependency>
+<groupId>javax.mail</groupId>
+<artifactId>javax.mail-api</artifactId>
+<version>1.5.3</version>
+</dependency>
+<dependency>
+<groupId>com.sun.mail</groupId>
+<artifactId>javax.mail</artifactId>
+<version>1.5.3</version>
+</dependency>
+
 
 	
 	
