--- a/pom.xml
+++ b/pom.xml
@@ -230,9 +230,12 @@
 <artifactId>javax.mail</artifactId>
 <version>1.5.3</version>
 </dependency>
-
-
-	
+<!-- 到处excel的jar包 -->
+<dependency>
+     <groupId>net.sourceforge.jexcelapi</groupId>
+     <artifactId>jxl</artifactId>
+     <version>2.6.12</version>
+</dependency>
 	
  </dependencies>
   <build>
